--- a/auctions/templates/auctions/close.html
+++ b/auctions/templates/auctions/close.html
@@ -1,20 +1,12 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-
-<div>
-    {% if user.is_authenticated %}
-
-    <a href="{% url 'home' id=user.id %}">My homepage</a>
-
-    {% endif %}
-</div>
 <h2>{{ title }}</h2>
 
-<h3>{{ listing.description }}</h3>
+<!-- <h3>{{ listing.description }}</h3>
 
-<h3>{{ listing.starting_bid }}</h3>
-<div>
+<h3>{{ listing.starting_bid }}</h3> -->
+<!-- <div>
     <a href="{% url 'watchlist' title=title %}">Add to Watchlist</a>
 </div>
 <div>
@@ -23,21 +15,22 @@
     {% endif %}
 
 
-</div>
-<div>
+</div> -->
+<!-- <div>
     {% if errormessege %}
     <h4>{{ errormessege }}</h4>
     {% endif %}
-</div>
-
-<!-- <div>
-    {% if messages %}
-    <h5>{{ messages }} You sold {{ listing.title }} for {{ highest_bid }} </h5>
-    {% endif %}
-
 </div> -->
 
 <div>
+    {% if messages %}
+    <h5>{{ messages }} You sold {{ listing.title }} for {{ highest_bid }} euros</h5>
+    {% endif %}
+
+</div>
+<a href="{% url 'home' id=user.id %}">Go back to your home page</a>
+
+<!-- <div>
     <form action="{% url 'bid' title=title %}" method="POST">
         {% csrf_token %}
 
@@ -47,10 +40,10 @@
 
         </div>
 
-    </form>
+    </form> -->
 
 
-</div>
+<!-- </div> -->
 
 
 {% endblock %}
