--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -9,41 +9,60 @@
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="{% static 'auctions/styles.css' %}" rel="stylesheet">
 </head>
+<div class="container">
+    <div class="row">
+        <div class="col-8">
 
-<body>
-    <h1>Auctions</h1>
-    <div>
-        {% if user.is_authenticated %}
-        Signed in as <strong>{{ user.username }}</strong>.
-        {% else %}
-        Not signed in.
-        {% endif %}
+            <body>
+                <h1>Auctions</h1>
+                <div>
+                    {% if user.is_authenticated %}
+                    Welcome <strong>{{ user.username }}</strong>!
+                    {% else %}
+                    Not signed in.
+                    {% endif %}
+                </div>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                    </li>
+
+                    <li class="nav-items">
+                        <a class='nav-link' href="{% url 'home' id=user.id %}">My homepage</a>
+                    </li>
+
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Register</a>
+                    </li>
+                    {% endif %}
+                </ul>
+                <hr>
+
+                {% block body %}
+                {% endblock %}
+            </body>
+        </div>
+
+        <div class="col-4">
+
+            <ul>
+                <h3>All Categories:</h3>
+                {% for c in categories %}
+                <a href="{% url 'category' category=c %}">
+                    <li>{{ c }}</li>
+                </a>
+                {% endfor %}
+            </ul>
+        </div>
     </div>
-    <ul class="nav">
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
-        </li>
-        {% if user.is_authenticated %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-        </li>
-
-        <li class="nav-items">
-            <a class='nav-link' href="{% url 'home' id=user.id %}">My homepage</a>
-        </li>
-
-        {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Log In</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'register' %}">Register</a>
-        </li>
-        {% endif %}
-    </ul>
-    <hr>
-    {% block body %}
-    {% endblock %}
-</body>
+</div>
 
 </html>
