--- a/auctions/templates/auctions/listing.html
+++ b/auctions/templates/auctions/listing.html
@@ -2,13 +2,8 @@
 
 {% block body %}
 
-<div>
-    {% if user.is_authenticated %}
 
-    <a href="{% url 'home' id=user.id %}">My homepage</a>
 
-    {% endif %}
-</div>
 <h2>{{ title }}</h2>
 
 <h3>{{ listing.description }}</h3>
@@ -27,23 +22,42 @@
 <div>
     {% if errormessege %}
     <h4>{{ errormessege }}</h4>
+
     {% endif %}
 </div>
 
-<!-- <div>
-    {% if messages %}
-    <h5>{{ messages }} You sold {{ listing.title }} for {{ highest_bid }} </h5>
+
+<div>
+    {% if errormessagefromwatchlist %}
+    <h5>{{ errormessagefromwatchlist }} </h5>
+    <a href="#">Remove From Your Watchlist</a>
     {% endif %}
 
-</div> -->
+</div>
 
 <div>
     <form action="{% url 'bid' title=title %}" method="POST">
         {% csrf_token %}
 
         {{ biddingform }}
+
+        <button type="submit" class="btn btn-primary">Bid</button>
+
+
+
+    </form>
+
+
+</div>
+
+<div>
+    <form action="{% url 'comment' title=title %}" method="POST">
+        {% csrf_token %}
+
+        {{ addcommentsform }}
+
         <div>
-            <button type="submit" class="btn btn-primary">Bid</button>
+            <button type="submit" class="btn btn-primary">Comment</button>
 
         </div>
 
@@ -51,6 +65,21 @@
 
 
 </div>
+
+<div>
+    <h4>Comments</h4>
+    <ul>
+
+        {% for commment in comments %}
+
+        <li>{{ comment }} {{ comment.user }} : {{ comment.content }}</li>
+
+        {% endfor %}
+
+    </ul>
+</div>
+
+
 
 
 {% endblock %}
