--- a/auctions/templates/auctions/newlisting.html
+++ b/auctions/templates/auctions/newlisting.html
@@ -6,7 +6,13 @@
     <form action="{% url 'new' %}" method="POST">
         {% csrf_token %}
         {{ new_listing_form }}
+        <span>Category:</span>
+        <select name="category" id="category">
+            {% for c in categories%}
+            <option value="{{ c.category }}">{{ c.category }}</option>
+            {% endfor %}
 
+        </select>
 
         <div>
             <button type="submit" class="btn btn-primary">Save</button>
