--- a/auctions/templates/auctions/newlisting.html
+++ b/auctions/templates/auctions/newlisting.html
@@ -2,17 +2,10 @@
 
 {% block body %}
 <h2>Your Listings</h2>
-<div>
-    <form action="{% url 'new' %}" method="POST">
+<div class="form-group">
+    <form action="{% url 'new' %}" method="POST" enctype='multipart/form-data'>
         {% csrf_token %}
-        {{ new_listing_form }}
-        <span>Category:</span>
-        <select name="category" id="category">
-            {% for c in categories%}
-            <option value="{{ c.category }}">{{ c.category }}</option>
-            {% endfor %}
-
-        </select>
+        {{ new_listing_form.as_p }}
 
         <div>
             <button type="submit" class="btn btn-primary">Save</button>
