add to and remove from watchlist function are now in one route. As well as liting and bid function. Also changed urls from using string to using integeral(id)

--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -5,7 +5,7 @@
 
 <ul>
     {% for listing in listings %}
-    <a href="{% url 'listing' title=listing.title %}">
+    <a href="{% url 'listing' listing_id=listing.id %}">
         <li>{{ listing.title }} | {{ listing.description }} | {{ listing.starting_bid}} </li>
     </a>
     {% endfor %}
