--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -10,7 +10,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ listing.title }} | {{ listing.starting_bid}} </h5>
                 <p class="card-text">{{ listing.description }}</p>
-                <a href="{% url 'listing' title=listing.title %}" class="btn btn-primary">View</a>
+                <a href="{% url 'listing' listing_id=listing.id %}" class="btn btn-primary">View</a>
 
             </div>
         </div>
