--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -14,6 +14,17 @@
         <div class="col-8">
 
             <body>
+
+                {% if messages %}
+                <div class="alert alert-primary" role="alert">
+                    <ul class="messages">
+                        {% for message in messages %}
+                        <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                            {% endfor %}
+                    </ul>
+                </div>
+                {% endif %}
+
                 <h1>Auctions</h1>
                 <div>
                     {% if user.is_authenticated %}
@@ -22,6 +33,7 @@
                     Not signed in.
                     {% endif %}
                 </div>
+
                 <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
