--- a/auctions/templates/auctions/home.html
+++ b/auctions/templates/auctions/home.html
@@ -5,14 +5,12 @@
 
 <div style="margin-top: 20px;">
     {% if listings %}
-    <ul>
-        {% for listing in listings %}
-        <a href="{% url 'listing' listing_id=listing.id %}">
-            <li>{{ listing.title }} </li>
-        </a>
-        {% endfor %}
 
-    </ul>
+    {% for listing in listings %}
+    {% include 'auctions/items_caption.html' %}
+    <hr>
+    {% endfor %}
+
     {% endif %}
 </div>
 <hr>
@@ -34,37 +32,35 @@
 <div style="margin-top: 20px;">
     {% if bids %}
     {% for bid in bids %}
-    <a href="{% url 'listing' listing_id=bid.id %}">
-        <li>{{ bid.item }} Bid for <strong>{{ bid.offer }} </strong>euros</li>
-    </a>
-
+    {% include 'auctions/items_caption.html' %}
     {% endfor %}
     {% else %}
     <p>You haven't bid anything yet.
     </p>
     {% endif %}
 </div>
-
-
-
 <hr>
 <h2> My Watchlist </h2>
-<div style="margin-top: 20px; display: inline;">
+<div>
     {% if watchlist %}
-    <ul>
+    <ul class='list-group'>
         {% for w in watchlist %}
         <a href="{% url 'listing' listing_id=w.item.id %}">
-            <li>{{ w.item }} </li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                {{ w.item.title }}
         </a>
-        <form action="{% url 'watchlist' listing_id=w.id %}" method="POST">
-            {% csrf_token %}
-            <input type="submit" value="Remove">
-        </form>
+        <span class="badge bg-light rounded-pill">
+            <form action="{% url 'watchlist' listing_id=w.id %}" method="POST">
+                {% csrf_token %}
+                <input type="submit" class="btn btn-outline-danger btn-sm" value="Remove">
+            </form>
+        </span>
+        </li>
         {% endfor %}
-
     </ul>
     {% else %}
     <p> Your watchlist is empty. </p>
     {% endif %}
 </div>
+
 {% endblock %}
