--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,20 +1,28 @@
 {% extends "auctions/layout.html" %}
-
+{% load template_extras %}
 {% block body %}
 <h2>Active Listings</h2>
 {% for listing in listings %}
-<div class="row">
-    <div class="col-12">
-        <div class="card" style="width: 38rem;margin-bottom: 2rem;">
-            <img class="card-img-top" src="{{ listing.photo.url }}" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">{{ listing.title }} | {{ listing.starting_bid}} </h5>
-                <p class="card-text">{{ listing.description }}</p>
-                <a href="{% url 'listing' listing_id=listing.id %}" class="btn btn-primary">View</a>
-
-            </div>
-        </div>
+<div class="card" style="width: 40rem;margin-bottom: 2rem;">
+    <img class="card-img-top" src="{{ listing.photo.url }}" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">{{ listing.title }} | {{ listing.starting_bid}} </h5>
+        <p class="card-text">{{ listing.description|convert_markdown|safe }}</p>
+        <a href="{% url 'listing' listing_id=listing.id %}" class="btn btn-primary">View</a>
     </div>
 </div>
+
 {% endfor %}
+{% endblock %}
+
+{% block category %}
+
+<ul>
+    <h3>All Categories:</h3>
+    {% for c in categories %}
+    <a href="{% url 'category' category=c %}">
+        <li>{{ c }}</li>
+    </a>
+    {% endfor %}
+</ul>
 {% endblock %}
